--- a/src/main/docs/guide/ioc/lifecycle.adoc
+++ b/src/main/docs/guide/ioc/lifecycle.adoc
@@ -12,7 +12,7 @@ To manage when a bean is constructed, see the section on <<scopes, bean scopes>>
 
 == When The Bean Is Destroyed
 
-To invoke a method when the bean is destroyed, use the `javax.annotation.PreDestroy` annotation:
+To invoke a method when the bean is destroyed, use the `jakarta.annotation.PreDestroy` annotation:
 
 snippet::io.micronaut.docs.lifecycle.PreDestroyBean[tags="class", indent=0]
 
