Introduce `@Vetoed` to exclude particular classes, methods and fields from processing

--- a/src/main/docs/guide/ioc/beans.adoc
+++ b/src/main/docs/guide/ioc/beans.adoc
@@ -20,3 +20,5 @@ Micronaut supports the following types of dependency injection:
 * Field injection
 * JavaBean property injection
 * Method parameter injection
+
+NOTE: Classes or particular fields, methods can be excluded by adding an annotation ann:core.annotation.Vetoed[]
